2000-06-01  John Sullivan  <sullivan@eazel.com>

	* art_svp_render_aa.c: (art_svp_render_aa_iter_step):
	Made it build by correcting struct member name from
	Raph's previous checkin.

Wed May 31 11:10:58 2000  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Updated
	n_steps_max in iter structure after steps reallocation.

Tue May 30 10:33:13 2000  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Fixed not
	updating iter->steps when steps gets reallocated.

2000-05-30  Pavel Cisler <pavel@eazel.com>

	* art_rgba.c:
	Make it build -- fix a broken include.

Tue May 30 00:09:21 2000  Raph Levien  <raph@acm.org>

	* art_render_gradient.c (art_render_gradient_setpix): Fixed
	an off-by-one loop error.

Mon May 29 15:00:39 2000  Raph Levien  <raph@acm.org>

	* Makefile.am: Moved relevant .h files into HEADERS stanza.

Mon May 29 13:48:49 2000  Raph Levien  <raph@acm.org>

	This is a fairly major commit, as it adds both the new, modular
	rendering architecture and gradients. Quite a bit of the code
	feels like "reference code" now, in that it is (hopefully)
	correct, but not necessarily very fast. In addition, there remain
	a few things not done, including the use of SVP's as non-driver
	mask sources. AlphaGamma and filter level also remain
	unimplemented. No compositing modes other than ART_NORMAL are
	implemented. All in good time!
	
	* configure.in: added -Wmissing-prototypes flag. Bumped version
	number to 2.3.0.

	* art_render.h:
	* art_render.c: Added new rendering architecture.

	* art_render_svp.h:
	* art_render_svp.c: Added renderers to use SVP's as mask
	sources in new rendering architecture.

	* art_render_gradient.h:
	* art_render_gradient.c: Added linear and radial gradients
	as image sources in new rendering architecture.

	* art_rgba.h:
	* art_rgba.c: Added functions for manipulating and compositing
	RGBA pixels.

	* art_svp_wind.c: Added static to trap_epsilon(), #ifdef'd out
	traverse().
